[package]
name = "sidekiq"
# When updating version, also modify html_root_url in the src/lib.rs file.
version = "0.11.0"
authors = ["Laurent Arnoud <laurent@spkdev.net>"]
description = "Rust Sidekiq Client"
repository = "https://github.com/spk/rust-sidekiq.git"
homepage = "https://github.com/spk/rust-sidekiq"
keywords = ["job", "queue", "async", "sidekiq", "client"]
license = "MIT"
readme = "README.md"
exclude = ["Justfile", "rustfmt.toml"]
edition = "2018"

[badges]
travis-ci = { repository = "spk/rust-sidekiq" }

[dependencies]
futures = "*"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
redis = { version = "*", features = ["connection-manager", "async-std-comp", "async-std-tls-comp"] }
time = "0.3"
