[package]
name = "sidekiq"
# When updating version, also modify html_root_url in the src/lib.rs file.
version = "0.14.0"
authors = ["Laurent Arnoud <laurent@spkdev.net>"]
description = "Rust Sidekiq Client"
repository = "https://github.com/spk/rust-sidekiq.git"
homepage = "https://github.com/spk/rust-sidekiq"
keywords = ["job", "queue", "async", "sidekiq", "client"]
license = "MIT"
readme = "README.md"
exclude = ["Justfile", "rustfmt.toml"]
edition = '2024'

[badges]
travis-ci = { repository = "spk/rust-sidekiq" }

[dependencies]
futures = "0.3"
rand = "0.10"
serde = "1.0"
serde_json = "1.0"
redis = { version = "1.0", features = ["connection-manager", "smol-comp", "smol-native-tls-comp"] }
time = "0.3"
